ajuste de docker env